--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme"></activity>
         <activity android:name=".ShowStatsActivity" />
+        <activity android:name=".RankingActivity" />
     </application>
 
 </manifest>
