Added Edit profile view and profiel view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".ShowStatsActivity" />
+            android:theme="@style/AppTheme" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".EditProfile"></activity>
     </application>
 
 </manifest>
