--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".EditProfile" />
         <activity android:name=".RankingActivity" />
         <activity android:name=".InviteFriendActivity" />
+        <activity android:name=".ContactActivity"/>
         <activity
             android:name=".LectureViewActivity"
             android:label="@string/title_activity_lecture_view_activiy"
