--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         <activity
             android:name=".LectureViewActivity"
             android:label="@string/title_activity_lecture_view_activiy"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".QuizViewActivity"
+            android:label="@string/title_activity_quiz_view"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
